--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,27 @@
     100%    { top: 390px; left: 40px; }
 }
 
+@-moz-keyframes path_ball {
+    0%      { top: 200px; left: 40px; }
+    33.3%   { top: 10px; left: 430px; }
+    50%     { top: 110px; left: 620px; }
+    100%    { top: 390px; left: 40px; }
+}
+
+@-o-keyframes path_ball {
+    0%      { top: 200px; left: 40px; }
+    33.3%   { top: 10px; left: 430px; }
+    50%     { top: 110px; left: 620px; }
+    100%    { top: 390px; left: 40px; }
+}
+
+@-ms-keyframes path_ball {
+    0%      { top: 200px; left: 40px; }
+    33.3%   { top: 10px; left: 430px; }
+    50%     { top: 110px; left: 620px; }
+    100%    { top: 390px; left: 40px; }
+}
+
 #canvas:hover #ball {
     background: #C00;
     -webkit-animation-name: path_ball;
@@ -87,6 +108,27 @@
     -webkit-animation-fill-mode: forwards;
     -webkit-animation-direction: alternate;
     -webkit-animation-iteration-count: infinite;
+    
+    -moz-animation-name: path_ball;
+    -moz-animation-duration: 5s;
+    -moz-animation-timing-function: linear;
+    -moz-animation-fill-mode: forwards;
+    -moz-animation-direction: alternate;
+    -moz-animation-iteration-count: infinite;
+    
+    -o-animation-name: path_ball;
+    -o-animation-duration: 5s;
+    -o-animation-timing-function: linear;
+    -o-animation-fill-mode: forwards;
+    -o-animation-direction: alternate;
+    -o-animation-iteration-count: infinite;
+    
+    -ms-animation-name: path_ball;
+    -ms-animation-duration: 5s;
+    -ms-animation-timing-function: linear;
+    -ms-animation-fill-mode: forwards;
+    -ms-animation-direction: alternate;
+    -ms-animation-iteration-count: infinite;
 }
 
 #paddle_opponent {
@@ -105,6 +147,27 @@
     100%    { top: 350px; }
 }
 
+@-moz-keyframes path_paddle {
+    0%      { top: 170px; }
+    33.3%   { top: 10px; }
+    50%     { top: 80px; }
+    100%    { top: 350px; }
+}
+
+@-o-keyframes path_paddle {
+    0%      { top: 170px; }
+    33.3%   { top: 10px; }
+    50%     { top: 80px; }
+    100%    { top: 350px; }
+}
+
+@-ms-keyframes path_paddle {
+    0%      { top: 170px; }
+    33.3%   { top: 10px; }
+    50%     { top: 80px; }
+    100%    { top: 350px; }
+}
+
 #canvas:hover #paddle_opponent {
     -webkit-animation-name: path_paddle;
     -webkit-animation-duration: 5s;
@@ -112,6 +175,27 @@
     -webkit-animation-fill-mode: forwards;
     -webkit-animation-direction: alternate;
     -webkit-animation-iteration-count: infinite;
+    
+    -moz-animation-name: path_paddle;
+    -moz-animation-duration: 5s;
+    -moz-animation-timing-function: linear;
+    -moz-animation-fill-mode: forwards;
+    -moz-animation-direction: alternate;
+    -moz-animation-iteration-count: infinite;
+    
+    -o-animation-name: path_paddle;
+    -o-animation-duration: 5s;
+    -o-animation-timing-function: linear;
+    -o-animation-fill-mode: forwards;
+    -o-animation-direction: alternate;
+    -o-animation-iteration-count: infinite;
+    
+    -ms-animation-name: path_paddle;
+    -ms-animation-duration: 5s;
+    -ms-animation-timing-function: linear;
+    -ms-animation-fill-mode: forwards;
+    -ms-animation-direction: alternate;
+    -ms-animation-iteration-count: infinite;
 }
 
 
